--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,6 @@ apply plugin: 'jacoco'
 group = 'com.proyecto'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = 1.8
-targetCompatibility = 1.8
 
 repositories {
 	mavenCentral()
@@ -31,19 +30,6 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
 	runtime('com.h2database:h2')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
-}
-
-jar{
-	manifest{
-		attributes 'Implementation-title':'proyecto1',
-		'Implementation-version':version
-	}
-}
-
-test {
- 	jacoco {
-		append = false
-		destinationFile = file("build/jacoco/jacocoTest.exec")
-	}
-	reports.junitXml.destination = file("jacoco/test-results")
+	testCompile('io.rest-assured:rest-assured:3.0.5')
+	testCompile 'junit:junit:4.12'
 }
